# bottle-serverless-tutorial

./: .gitignore  README.md  pyproject.toml  zappa_settings.json
bottless/: app.py  config.py
bottless/libs/: s3_client.py
